Added rest of organization logos

--- a/_partner_orgs/12. SOS richmond.md
+++ b/_partner_orgs/12. SOS richmond.md
@@ -3,7 +3,7 @@ name: SOS Richmond
 website: https://www.sos-richmond.org/
 bio: SOS Richmond is housed, unhoused, and formerly unhoused staff and allies working together to improve our neighborhoods. We are in encampments, problematic hotspots, neighborhood events, neighborhood councils, community-organizing initiatives, and neighborhood improvement projects advocating for safety, stability, and security. These urgent opportunities for neighborhood action are also doors to personal transformation. We cannot change our community without addressing attitudes and behaviors in our own lives. The lived experiences of our unhoused neighbors shapes our collective agency. Empowerment is the key to our shared success.
 
-image_path: /images/orgs/exampleorg.jpg
+image_path: /images/orgs/SOSRichmond.png
 
 social_media_link: https://www.instagram.com/sos.richmond/
 social_media_name: Instagram
