--- a/_partner_orgs/13. CBE.md
+++ b/_partner_orgs/13. CBE.md
@@ -3,7 +3,7 @@ name: Communities for a Better Environment
 website: https://www.cbecal.org/
 bio: Founded in 1978, Communities for a Better Environment (CBE) is one of the preeminent environmental justice organizations in the nation. The mission of CBE is to build people’s power in California’s communities of color and low income communities to achieve environmental health and justice by preventing and reducing pollution and building green, healthy and sustainable communities and environments.
 
-image_path: /images/orgs/exampleorg.jpg
+image_path: /images/orgs/CBE.jpeg
 
 social_media_link: https://www.instagram.com/cberichmond/
 social_media_name: Instagram
