--- a/_partner_orgs/15. Arts and Culture.md
+++ b/_partner_orgs/15. Arts and Culture.md
@@ -3,7 +3,7 @@ name: Arts and Culture Commission
 website: https://www.ci.richmond.ca.us/104/Arts-Culture-Commission
 bio: The Richmond Arts & Culture Commission, in partnership with the Arts and Culture Division, is the lead organization for the development and advocacy of the arts and culture in Richmond. The Commission is respected and sought after for its broad and diverse knowledge of the arts. Members reflect the strength and diversity of the City and represent multiple fields of expertise.
 
-image_path: /images/orgs/exampleorg.jpg
+image_path: /images/orgs/RichmondArts&Culture.png
 
 social_media_link: https://www.instagram.com/richmondarts
 social_media_name: Instagram
