--- a/_partner_orgs/4. The Watershed Project.md
+++ b/_partner_orgs/4. The Watershed Project.md
@@ -3,7 +3,7 @@ name: The Watershed Project
 website: https://thewatershedproject.org/
 bio: The Watershed Project's mission  is to inspire San Francisco Bay Area communities to understand, appreciate, and protect our local watersheds.
 
-image_path: /images/orgs/exampleorg.jpg
+image_path: /images/orgs/TheWatershedProject.jpeg
 
 social_media_link: https://www.instagram.com/groundworkrichca/
 social_media_name: Instagram
