--- a/_partner_orgs/5. Pogo Park.md
+++ b/_partner_orgs/5. Pogo Park.md
@@ -3,7 +3,7 @@ name: Pogo Park
 website: https://pogopark.org/
 bio: Pogo Park transforms broken and little-used city parks in one of America’s toughest inner-city neighborhoods, Richmond, California’s “Iron Triangle,” into safe, green, beautiful public spaces for children to play.
 
-image_path: /images/orgs/exampleorg.jpg
+image_path: /images/orgs/PogoPark.jpeg
 
 social_media_link: https://www.instagram.com/pogopark
 social_media_name: Instagram
