--- a/_partner_orgs/6. Rich City Rides.md
+++ b/_partner_orgs/6. Rich City Rides.md
@@ -3,7 +3,7 @@ name: Rich City Rides
 website: https://richcityrides.org/
 bio: RICH CITY Rides is a non profit organization with a mission. Our dedicated staff and volunteers come together to help create a healthier city. Our programs focus on creating opportunities to improve health and economics by promoting cycling as a social, sustainable and green mode of transportation.
 
-image_path: /images/orgs/exampleorg.jpg
+image_path: /images/orgs/RichCityRides.jpeg
 
 social_media_link: https://www.instagram.com/richcityrides/
 social_media_name: Instagram
