--- a/_partner_orgs/8. CCRCD.md
+++ b/_partner_orgs/8. CCRCD.md
@@ -3,7 +3,7 @@ name: Contra Costa Resource Conservation District
 website: https://www.ccrcd.org/
 bio: The Mission of the Contra Costa Resource Conservation District is to Facilitate Conservation and Stewardship of the Natural Resources in Contra Costa County.
 
-image_path: /images/orgs/exampleorg.jpg
+image_path: /images/orgs/ContraCostaRCD.jpeg
 
 social_media_link: https://www.instagram.com/ccrcd
 social_media_name: Instagram
