--- a/_partner_orgs/9. CURME.md
+++ b/_partner_orgs/9. CURME.md
@@ -3,7 +3,7 @@ name: Communities United Restoring Mother Earth
 website: http://curme.weebly.com/
 bio: "CURME is an urban gardening project, dedicated to facilitating the creation of an agricultural economy independent of the agribusiness commodities market, serving individuals, families, schools and organizations, training them to grow their own food and medicine in a way that restores the health of the land, the water, the people and the community."
 
-image_path: /images/orgs/exampleorg.jpg
+image_path: /images/orgs/CURME.png
 
 social_media_link: earthmotheriyalode@curme.org
 social_media_name: Email
