--- a/_partner_orgs/10. EcoVillage Farm.md
+++ b/_partner_orgs/10. EcoVillage Farm.md
@@ -3,7 +3,7 @@ name: EcoVillage Farm
 website: https://ecovillagefarm.org/donate
 bio: EcoVillage Farm is a model for growing healthy youth and healthy communities. People are an important part of the environment and we want to broaden the range of people involved in environmental and social justice work to include urban residents and people of various cultural backgrounds.
 
-image_path: /images/orgs/exampleorg.jpg
+image_path: /images/orgs/EcoVillage.jpeg
 
 social_media_link: https://www.facebook.com/ecovillagefarm/
 social_media_name: Facebook
