--- a/_partner_orgs/3. Groundwork Richmond.md
+++ b/_partner_orgs/3. Groundwork Richmond.md
@@ -3,7 +3,7 @@ name: Groundwork Richmond
 website: http://www.groundworkrichmond.org/
 bio: The mission of Groundwork Richmond is to bring about the sustained regeneration, improvement and management of the physical environment by developing community-based partnerships which empower people, businesses and organizations to promote environmental, economic and social well-being.
 
-image_path: /images/orgs/exampleorg.jpg
+image_path: /images/orgs/GroundworkRichmond.jpeg
 
 social_media_link: https://www.instagram.com/groundworkrichca/
 social_media_name: Instagram
