shortened org bios

--- a/_partner_orgs/11. Moving Forward 510.md
+++ b/_partner_orgs/11. Moving Forward 510.md
@@ -1,7 +1,7 @@
 ---
 name: Moving Forward 510
 website: https://www.movingforward510.org/
-bio: We aim to show and prove that we, the community, value the future of our young people. Our project is a long term investment in the Richmond community and helping our community become healthier, ensuring families have safe and clean parks to enjoy a walk or get exercise, highlighting the importance of education, and providing tools needed to learn and thrive are keys to success we desire to share.   
+bio: Our project is a long term investment in the Richmond community and helping our community become healthier, ensuring families have safe and clean parks to enjoy a walk or get exercise, highlighting the importance of education, and providing tools needed to learn and thrive are keys to success we desire to share.   
 
 image_path: /images/orgs/MovingForward.jpeg
 
