added dirtworld image

--- a/_partner_orgs/07. Dirt World.md
+++ b/_partner_orgs/07. Dirt World.md
@@ -3,7 +3,7 @@ name: Dirt World
 website: https://www.facebook.com/DirtWorldRichmond/
 bio: The best and only bike park in the 510, Dirt World is a two-acre free, public bicycle terrain park currently open for our enjoyment on the Richmond Greenway.
 
-image_path: /images/orgs/exampleorg.jpg
+image_path: /images/orgs/dirtworld.png
 
 social_media_link: https://www.instagram.com/dirtworld_bikepark/
 social_media_name: Instagram
