--- a/_partner_orgs/02. Urban Tilth.md
+++ b/_partner_orgs/02. Urban Tilth.md
@@ -3,7 +3,7 @@ name: Urban Tilth
 website: https://urbantilth.org/
 bio: Urban Tilth inspires, hires, and trains local residents to cultivate agriculture, feed our community, and restore relationships to land to build a more sustainable food system, within a just and healthier community.
 
-image_path: /images/orgs/UrbanTilth.png
+image_path: /images/orgs/urbanTilthPhoto.jpeg
 
 social_media_link: https://www.instagram.com/urbantilth/
 social_media_name: Instagram
